# Autonomous_Newbie_Project_2025

./: .gitignore  README.md  data.csv  plot.py  ploy.py  spline_test.py
install/: local_setup.sh  setup.sh
install/autonomous_take_home_project/share/autonomous_take_home_project/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_take_home_project/share/autonomous_take_home_project/cmake/: autonomous_take_home_projectConfig.cmake
install/autonomous_take_home_project_runner/lib/autonomous_take_home_project_runner/: runner
install/autonomous_take_home_project_runner/share/autonomous_take_home_project_runner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autonomous_take_home_project_runner/share/autonomous_take_home_project_runner/cmake/: autonomous_take_home_project_runnerConfig.cmake
install/msgs/share/msgs/: local_setup.sh  package.sh  package.xml
install/msgs/share/msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_msgs__rosidl_generator_cExport.cmake  export_msgs__rosidl_generator_cppExport.cmake  (+8 more)
src/autonomous_take_home_project/: CMakeLists.txt
src/autonomous_take_home_project/src/: cubic_regression.cpp  cubic_regression.hpp  main.cpp
src/autonomous_take_home_project_runner/: CMakeLists.txt  data.csv  package.xml  readme.md
src/autonomous_take_home_project_runner/src/: runner.cpp
src/msgs/: CMakeLists.txt
src/msgs/msg/: Kinematics.msg  LocationStamped.msg  Response.msg
(+62 files in other folders)
